# mi-portfolio-rs

./: .gitignore  Cargo.toml  Trunk.toml  config.nginx  deploy.sh  index.html  portfolio-backend.service
.sqlx/: query-443cf5cc14f4cea3e0ac3bc2ede8c3511306c0fbd90f86785ff9ffaba4b01157.json  query-c75653841703d57f52c02d00d2700c2bbecdb3c84b26b86e9592ab016ed7dd34.json  query-f1e442e12eb4734e08b317e75d207afb1f04a7e10a2d61f7c78e8251290c601f.json  query-fbcddde0f51fa66e67d559d62296f12912f5bc4199a09bb65c714627b4f38cfa.json
.zed/: settings.json
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/api/: qr.rs
backend/src/db/: mod.rs
backend/src/endpoint/: mod.rs  qr.rs  track.rs
backend/src/middleware/: mod.rs  session_cookie.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
crates/frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
crates/frontend/resources/dyn-data/: skills.json  works.json
crates/frontend/resources/dyn-data/skill/: cs-unity.json  java-javafx.json  microservices.json  problem-solving.json  rust.json  selftaught.json  teamwork-leadership.json
crates/frontend/resources/dyn-data/works/: leba-api.json  leba.json  mk-template.json  seal-code.json  the-round-table.json  trt-api.json
crates/frontend/resources/dyn_data/skill-panes/: cs-unity.json  java-javafx.json  microservices.json  problem-solving.json  rust.json  selftaught.json  teamwork-leadership.json  test.json
crates/frontend/resources/langs/: en_US.properties  es_ES.properties
crates/frontend/src/: lib.rs  main.rs
crates/frontend/src/components/: icon.rs  mod.rs
crates/frontend/src/dyn_data_gen/: mod.rs
crates/frontend/src/icon/: mod.rs
crates/frontend/src/lang/: mod.rs
crates/frontend/src/resources/: mod.rs
crates/frontend/src/styles/: mod.rs  pane.rs  text.rs
crates/frontend/src/ui_structure/: about.rs  home.rs  mod.rs  works.rs
crates/frontend/src/ui_structure/home/: about.rs  mod.rs  works.rs
crates/frontend/src/ui_structure/work/: mod.rs
crates/frontend/static/css/: colors.css  generics.css  index.css  root.css  style.css  work.css
crates/frontend/static/css/iframes/: about.css  works.css
crates/frontend/static/css/index/: left-pane.css  right-pane.css
crates/frontend/static/html/: about.html  contact.html  resume.html  works.html
crates/frontend/static/html/works/: entityink.html  leba-rest-api.html  leba.html  mk-template.html  seal-code.html  sprout-lands.html  the-round-table.html  trt-api.html
crates/macros/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
frontend/src/: lib.rs  main.rs
frontend/src/backend/: mod.rs
frontend/src/components/: icon.rs  loading.rs
frontend/src/data_gen/: mod.rs
frontend/src/lang/: mod.rs
frontend/src/resources/: mod.rs
frontend/src/styles/: mod.rs
frontend/src/ui_structure/: mod.rs
frontend/src/ui_structure/doc/: mod.rs
frontend/src/ui_structure/home/: about.rs  knowledge.rs  mod.rs  pr.rs  timeline.rs  works.rs
frontend/src/ui_structure/work/: mod.rs
frontend/static/css/: root.css
frontend/static/data/: timeline.json  works.json
frontend/static/data/works/: compositor.json  cuqdyn-c.json  db-sniffer.json  fee.json  mk-template.json  the-round-table.json
frontend/static/docs/: resume.odt
frontend/static/langs/: en_US.properties  es_ES.properties
migrations/: 20251009155405_v1.sql  20251017170446_v2.sql
resources/dyn-data/: knowledge.json  works.json
resources/dyn-data/works/: compositor.json  cuqdyn-c.json  db-sniffer.json  fee.json  mk-template.json  the-round-table.json
resources/langs/: en_US.properties  es_ES.properties
scripts/: build.sh  db.sh  deploy.sh
src/: main.rs
src/components/: icon.rs  mod.rs
src/dyn_data_gen/: mod.rs
src/lang/: mod.rs
src/resources/: mod.rs
src/ui_structure/home/: about.rs  knowledge.rs  mod.rs  works.rs
src/ui_structure/work/: mod.rs
static/data/: skills.json  works.json
static/data/works/: compositor.json  leba.json  seal-code.json
static/docs/: carta-presentacion.txt
static/html/works/: entityink.html  sprout-lands.html
