[package]
name = "frontend"
version = "1.0.1"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
stylist = { version = "0.13.0", features = ["yew_integration"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
gloo-net = { version = "0.6.0" }
web-sys = { version = "0.3.77", features = ["Navigator", "Window"] }
syn = { version = "2.0.104" }
quote = { version = "1.0.40" }

[lib]
proc-macro = true