[workspace]
resolver = "2"
members = ["backend", "bridge", "frontend"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = { version = "2" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }