[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4.42" }
uuid = { version = "1.18.1" }
actix-web = { version = "4.11.0" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = { version = "2" }
