[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
actix-web = { version = "4.11.0" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
futures-util = { version = "*" }

sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

bridge = { path = "../bridge" }
