[package]
name = "frontend"
version = "1.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
stylist = { version = "0.13.0", features = ["yew_integration"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.42", features = ["serde"] }
gloo-net = { version = "0.6.0" }
web-sys = { version = "0.3.77", features = ["Navigator", "Window"] }
syn = { version = "2.0.104" }
quote = { version = "1.0.40" }

[build-dependencies]
image = { version = "0.25" }
walkdir = { version = "2.5" }

[lib]
proc-macro = true
