[package]
name = "frontend"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
stylist = { version = "0.13.0", features = ["yew_integration"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
gloo-net = { version = "0.6.0" }
web-sys = { version = "0.3.74", features = ["Navigator", "Window"] }
syn = { version = "2.0.90" }
quote = { version = "1.0.37" }

[lib]
proc-macro = true